blog png css update

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                         <h1 class=" title m-0 ">TECHNOVERT</h1>
                 </div>
                 <div class="nav">
-                    <nav class="navlist">
-                        <ul class="m-0 p-0 ">
+                    <nav class="navlist  m-0 p-0 ">
+                        <ul class=" m-0 p-0 ">
                             <li ><a class="navlink" href="#">HOME</a></li>
                             <li ><a class="navlink" href="#">SERVICES</a></li>
                             <li ><a class="navlink" href="#">CAREERS</a></li>
