navigation hover update

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     
     <title>Technovert</title>
 </head>
-<body >
+<body class="bodyclass" >
         <div>
                 <div class="head ">
                         <h1 class=" title m-0 ">TECHNOVERT</h1>
                 </div>
                 <div class="nav">
                     <nav class="navlist  m-0 p-0 ">
-                        <ul class=" m-0 p-0 ">
-                            <li ><a class="navlink" href="#">HOME</a></li>
+                        <ul class="navitem m-0 p-0 ">
+                            <li ><a class="navlink " href="#">HOME</a></li>
                             <li ><a class="navlink" href="#">SERVICES</a></li>
                             <li ><a class="navlink" href="#">CAREERS</a></li>
                             <li ><a class="navlink" href="#">CONTACT</a></li>
